// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/FormRememberMe FormRememberMe should render with default props 1`] = `
<FormRememberMe
  handleChange={[Function]}
  onChange={[MockFunction]}
/>
`;

exports[`components/FormRememberMe Render should render with additional checkbox props 1`] = `
<WithStyles(Checkbox)
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
>
  __CHILDREN__
</WithStyles(Checkbox)>
`;

exports[`components/FormRememberMe Render should render with default props 1`] = `
<WithStyles(Checkbox)
  onChange={[MockFunction]}
>
  __CHILDREN__
</WithStyles(Checkbox)>
`;
